Terminando diseño de interfaz

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     }
   ],
   "compilerOptions": {
-    "module": "NodeNext"
+    "module": "NodeNext",
+    "forceConsistentCasingInFileNames": true,
+    "strict": true
   }
 }
